Hide scrollbars, fixup home CSS

--- a/react/laurent/public/css/nilio.css
+++ b/react/laurent/public/css/nilio.css
@@ -83,3 +83,7 @@ main {
     color: #dcdccc;
     overflow: scroll;
 }
+
+main::-webkit-scrollbar {
+    display: none;
+}
