--- a/react/laurent/src/blog.css
+++ b/react/laurent/src/blog.css
@@ -14,6 +14,10 @@
 	overflow: scroll;
     }
 
+    #blog-aside::-webkit-scrollbar {
+	display: none;
+    }
+
     #blog-aside h5 {
 	margin: 24px;
     }
@@ -25,6 +29,10 @@
     #blog-content {
 	grid-area: "blog";
 	overflow: scroll;
+    }
+
+    #blog-content::-webkit-scrollbar {
+	display: none;
     }
 }
 
